[package]
name = "gee"
version = "0.3.0"
authors = ["Brainium Studios LLC"]
edition = "2021"
description = "A convenience-first geometry library tailor-made for 2D games! 📐"
documentation = "https://docs.rs/gee"
repository = "https://github.com/BrainiumLLC/gee"
readme = "README.md"
keywords = ["geometry", "math", "mathematics", "matrix", "vector"]
categories = ["graphics"]
license = "Apache-2.0/MIT"

[features]
default = []

[dependencies]
en = "0.1.5"
euclid = { version = "0.22.6", optional = true }
d6 = { git = "https://github.com/BrainiumLLC/d6", optional = true }
serde = { version = "1.0.115", features = ["derive"], optional = true }
strum = "0.22.0"
strum_macros = "0.22.0"
